--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ baseURL = "https://r-mathieu.github.io/"
 # [en, zh-cn, fr, ...] determines default content language
 defaultContentLanguage = "en"
 # theme
-theme = "LoveIt"
+theme = "LoveIt_"
 
 # themes directory
 #themesDir = "../.."
@@ -16,6 +16,18 @@ enableGitInfo = false
 enableEmoji = true
 
 [menu]
+  [[menu.main]]
+    identifier = "personnal-project"
+    # you can add extra information before the name (HTML format is supported), such as icons
+    pre = ""
+    # you can add extra information after the name (HTML format is supported), such as icons
+    post = ""
+    name = "Personal Project"
+    url = "/wip"
+    # title will be shown when you hover on this menu link
+    title = "personnal project"
+    weight = 1
+    
   [[menu.main]]
     identifier = "professional-project"
     # you can add extra information before the name (HTML format is supported), such as icons
