--- a/config.toml
+++ b/config.toml
@@ -23,7 +23,7 @@ enableEmoji = true
     # you can add extra information after the name (HTML format is supported), such as icons
     post = ""
     name = "Personal Project"
-    url = "/wip"
+    url = "/wip/"
     # title will be shown when you hover on this menu link
     title = "personnal project"
     weight = 1
